tests/good/core003.lat
// Testing the return checker

int f () {
   if (true)
     return 0;
   else
     {}
}

int g () {
  if (false) 
      {}
  else
      return 0;
}

boolean j() {
  if (!false && (false || true)) return true;
}

void p () {}
  

int main() {
  p();
  return 0;
}
