tests/bad/objects/3.lat
class A {
    void x(tre x) {}
}

int main () { return 0; }